# data-engineering

./: .gitignore  check_columns_csv.py  data.json  fake-json.py  file-faker.py  file-generator.py  pyproject.toml  remove_columns_from_csv.py
fake-data/: file-faker.py
