[tool.poetry]
name = "data-engineering"
version = "0.1.0"
description = "A set of utilities to help automate data-engineering"
authors = ["Tom Klimovski <tom.klimovskia@gmail.com>"]

[tool.poetry.scripts]
dataeng = 'dataeng.cli:app'

[tool.poetry.dependencies]
python = "~3.8"
Faker = "^15.3.3"
jsf = "^0.4.0"


[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
