[tool.poetry]
name = "data-engineering"
version = "0.1.0"
description = "A set of utilities to help automate data-engineering"
authors = ["Tom Klimovski <tom.klimovskia@gmail.com>"]

[tool.poetry.scripts]
dataeng = 'dataeng.cli:app'

[tool.poetry.dependencies]
python = "~3.8"
Faker = "^15.3.3"
jsf = "^0.4.0"
dbt-core = "^1.3.1"
dagster = "^1.1.3"
dagit = "^1.1.3"
sqlfluff = "^1.4.2"
dask = "^2022.12.1"
pandas = "^1.5.2"


[tool.poetry.group.dev.dependencies]
deptry = "^0.6.6"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
